# tui-notes

./: 1  Cargo.toml  README.md  notes.db
src/: app_state.rs  main.rs  note.rs  note_state.rs  notes_list_events.rs
src/db/: mod.rs
src/events/: keyboard.rs  mod.rs
src/ui/: mod.rs
