[package]
name = "tui-notes"
version = "0.1.0"
authors = ["= <=>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
rusqlite = "0.24.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
